# evm_pools

./: :w  Cargo.toml  ]  rustfmt.toml
src/: any_factory.rs  any_pool.rs  any_trade.rs  err.rs  factory.rs  generator.rs  lib.rs  pool.rs  pool_contract.rs  pools_manager.rs  sol_types.rs  tick_math.rs  v2_factory.rs  v2_pool.rs  v3_factory.rs  v3_pool.rs  v3_state.rs  v4_factory.rs  v4_pool.rs
src/conncentrated_liquidity_pools/: bitmap_math.rs  states.rs  tick_math.rs  trade_math.rs  x96price_math.rs
src/v2_base/: mod.rs
src/v2_pool/: mod.rs
src/v3_base/: bitmap.rs  bitmap_math.rs  mod.rs  states.rs  ticks.rs  trade_math.rs  v3_state.rs
src/v3_pool/: mod.rs  v3_calls.rs  v3_key.rs  v3_live.rs  v3_state.rs
src/v4_pool/: mod.rs  v4_calls.rs  v4_key.rs  v4_live.rs
